Activate brush supersampling for all auto brushes smaller than 10 px

Previously, it has been enabled only for brushes with "Default"
brush tip. This patch activates supersampling for all brush
types.

WARNING: this patch will change all existing brushes for sizes
         below 10px!

BUG:433603
BUG:449737