libs/image/kis_circle_mask_generator.h
@@ -28,8 +28,6 @@ public:
 
     quint8 valueAt(qreal x, qreal y) const override;
 
-    bool shouldSupersample() const override;
-
     bool shouldVectorize() const override;
 
     KisBrushMaskApplicatorBase* applicator() override;
